--- a/templates/book.html
+++ b/templates/book.html
@@ -14,9 +14,10 @@
                         <div class="page-head-blog">
                             <div class="single-blog-page">
                                 <!-- search option start -->
-                                <form action="#">
+                                <form method="POST" action="{% url 'search' %}" >
+                                    {% csrf_token %}
                                     <div class="search-option">
-                                        <input type="text" placeholder="Search for books">
+                                        <input type="text" name="search_btn" placeholder="Search for books">
                                         <button class="button" type="submit">
                                         <i class="bi bi-search"></i>
                                         
@@ -35,12 +36,12 @@
                                         <div class="recent-single-post">
                                             <div class="post-img">
                                                 {% if book.cover %}
-                                                <a href="#">
+                                                <a href="{{book.get_absolute_url}}">
                                                     <img src="{{book.cover.url}}" alt="{{book.title}}" style="width: 100px; height: 60px;">
                                                 </a>
                                                 {% else %}
-                                                <a href="#">
-                                                    <img src="{% static 'img/background/reviews-bg.jpg' %}" alt="No image here">
+                                                <a href="{{book.get_absolute_url}}">
+                                                    <img src="{% static 'img/background/empty.jfif' %}" alt="No image here" style="width: 100px; height: 60px;">
                                                 </a>
 
                                                 {% endif %}
@@ -88,8 +89,13 @@
                             <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="single-blog">
                                     <div class="single-blog-img">
-                                        <a href="blog-details.html">
-                                            <img src="{% static 'img/blog/1.jpg' %}" alt="">
+                                        <a href="{{latest.get_absolute_url}}">
+                                            {% if latest.cover %}
+                                            <img src="{{latest.cover.url}}" alt="{{latest.title}}">
+                                            {% else %}
+                                            <img src="{% static 'img/background/empty.jfif' %}" alt="No image here">
+                                            
+                                            {% endif %}
                                         </a>
                                     </div>
                                     <div class="blog-meta">
@@ -98,19 +104,19 @@
                                         <a href="#">11 comments</a>
                                       </span>
                                         <span class="date-type">
-                                        <i class="bi bi-calendar"></i>2016-03-05 / 09:10:16
+                                        <i class="bi bi-calendar"></i>{{latest.updated_on}}
                                       </span>
                                     </div>
                                     <div class="blog-text">
                                         <h4>
-                                            <a href="#">Post my imagine Items</a>
+                                            <a href="#">{{latest.title}}</a>
                                         </h4>
                                         <p>
-                                            Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit.
+                                            {{latest.description | slice:200}}...
                                         </p>
                                     </div>
                                     <span>
-                                        <a href="" class="ready-btn">Read more</a>
+                                        <a href="{{latest.get_absolute_url}}" class="ready-btn">Read more</a>
                                       </span>
                                 </div>
                             </div>
