--- a/static/css/style.css
+++ b/static/css/style.css
@@ -276,6 +276,7 @@ div#preloader {
 
 #header .logo h1 span {
     color: #3ec1d5;
+    /* color:#000; */
 }
 
 #header .logo h1 a,
@@ -287,7 +288,7 @@ div#preloader {
 #header .logo img {
     padding: 0;
     margin: 0;
-    max-height: 40px;
+    max-height: 60px;
 }
 
 @media (max-width: 768px) {
@@ -301,7 +302,7 @@ div#preloader {
 }
 
 .header-bg {
-    background: url(../img/background/page-header.jpg);
+    
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
@@ -1764,6 +1765,7 @@ div#preloader {
     border: medium none;
     padding: 6px 15px;
     width: 80%;
+    outline: 0;
 }
 
 .search-option {
